--- a/static/CSS/aboutus.css
+++ b/static/CSS/aboutus.css
@@ -25,7 +25,7 @@ body {
 }
 
 .cm-menu-btn {
-    display: none;
+    display: none; /* Display the back button */
 }
 
 .menu-ul {
@@ -173,6 +173,12 @@ body {
     .partner {
         width: 100%;
         max-width: none;
+    }
+
+    @media only screen and (max-width: 768px) {
+        .cm-menu-btn {
+            display: inline-block; /* Display the back button on smaller screens */
+        }
     }
 }
 
