--- a/static/CSS/home.css
+++ b/static/CSS/home.css
@@ -30,7 +30,7 @@ body{
     font-size: 24px;
     margin-left: 30px;
 }
-.home-get-started{
+.home-get-started {
     margin-left: 30px;
     margin-top: 20px;
     padding: 10px 20px;
@@ -42,7 +42,9 @@ body{
     border-radius: 30px;
     color: #fff;
     width: fit-content;
+    text-decoration: none; /* Remove underline */
 }
+
 .Home-text{
     width: 50%;
     display: flex;
@@ -95,5 +97,9 @@ body{
     }
     .Front{
         margin-top: 70px;
+    }
+    .home-get-started {
+        margin-left: auto;
+        margin-right: auto;
     }
 }
