--- a/static/CSS/signup.css
+++ b/static/CSS/signup.css
@@ -125,3 +125,11 @@ button:hover {
 .sign-up-img {
   width: 100px;
 }
+
+.psact{
+  width: 100%;
+  text-align: center;
+  color: red;
+  background-color: #f0d0d3;
+  padding: 10px;
+}
