--- a/templates/customers/userdetails.html
+++ b/templates/customers/userdetails.html
@@ -77,7 +77,7 @@
               <th>Item Type</th>
               <th>Item Price</th>
               <th>Item Rating</th>
-              <th>Count</th>
+              <!-- <th>Count</th> -->
             </tr>
             {% for item in food_items %}
             <tr>
@@ -86,7 +86,7 @@
               <td>{{ item.food_item.item_type }}</td>
               <td>{{ item.food_item.item_price }}</td>
               <td>{{ item.food_item.item_rating }}</td>
-              <td>{{ item.food_item.order_count }}</td>
+              <!-- <td>{{ item.food_item.order_count }}</td> -->
               {% endif %}
             </tr>
             {% endfor %}
