some minor bug fixes

--- a/templates/restaurants/details.html
+++ b/templates/restaurants/details.html
@@ -101,7 +101,7 @@
         <p class="card-text">
           Earnings: {{ restaurant_details.balance_earned }}
         </p>
-        <p class="card-text">Review: {{ restaurant_details.review }}</p>
+        <p class="card-text">Reviews: {{ restaurant_details.review }}</p>
       </div>
 
       <h2>Orders</h2>
