--- a/templates/restaurants/signup_restaurant.html
+++ b/templates/restaurants/signup_restaurant.html
@@ -25,7 +25,6 @@
           placeholder="Cuisine Type"
           required
         /> -->
-
         <input type="email" name="email" placeholder="Email" required />
         <input
           type="tel"
@@ -54,6 +53,14 @@
         <input type="text" name="cityname" placeholder="City" required />
         <input type="text" name="statename" placeholder="State" required />
         <input type="text" name="pincode" placeholder="Pin Code" required />
+        <input
+          type="text"
+          name="account_number"
+          placeholder="Account Number"
+          required
+        />
+        <input type="text" name="ifsc_code" placeholder="IFSC CODE" required />
+        <input type="text" name="bank_name" placeholder="Bank Name" required />
         <input type="text" name="timing" placeholder="Timings" required />
         <select name="cuisine_type">
           <option value="null">Select Cuisine Type</option>
